--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,9 @@
       "react-dom": "^17.0.2",
       "react-router-dom": "^5.2.0",
       "react-scripts": "5.0.0",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "@web3-react/core": "^6.1.9",
+      "@web3-react/injected-connector": "^6.0.7"
     },
     "scripts": {
       "start": "react-scripts start",
