--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,27 +1,33 @@
 aniso8601==9.0.1
 apispec==5.1.1
-certifi==2021.10.8
-charset-normalizer==2.0.10
 click==8.0.3
+cycler==0.11.0
+datauri==1.0.0
 Flask==2.0.2
 flask-apispec==0.11.0
+Flask-HTTPAuth==4.5.0
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
-idna==3.3
+fonttools==4.29.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.27.0
+matplotlib==3.5.1
+numpy==1.22.2
 packaging==21.3
+Pillow==9.0.1
 pyparsing==3.0.7
+python-datauri==1.1.0
+python-dateutil==2.8.2
 pytz==2021.3
-requests==2.27.1
+randimage==1.2
+scipy==1.8.0
 six==1.16.0
 SQLAlchemy==1.4.31
 termcolor==1.1.0
-tqdm==4.62.3
-urllib3==1.26.8
 webargs==8.1.0
-Werkzeug==2.0.2
+Werkzeug==2.0.3
