--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@celo-tools/use-contractkit": "^2.1.4",
         "@celo/contractkit": "^1.5.2",
+        "@ramp-network/ramp-instant-sdk": "^3.0.0",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
