--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,70 +1,32 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
 aniso8601==9.0.1
 apispec==5.1.1
-async-timeout==4.0.2
-attrs==21.4.0
-base58==2.1.1
-bitarray==1.2.2
-certifi==2021.10.8
-charset-normalizer==2.0.10
-click==8.0.3
+click==8.0.4
 cycler==0.11.0
-cytoolz==0.11.2
-eth-abi==2.1.1
-eth-account==0.5.7
-eth-hash==0.3.2
-eth-keyfile==0.5.1
-eth-keys==0.3.4
-eth-rlp==0.2.1
-eth-typing==2.3.0
-eth-utils==1.10.0
-Flask==2.0.2
+datauri==1.0.0
+Flask==2.0.3
 flask-apispec==0.11.0
+Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 fonttools==4.29.1
-frozenlist==1.3.0
-hexbytes==0.2.2
-idna==3.3
-ipfshttpclient==0.8.0a2
-itsdangerous==2.0.1
+itsdangerous==2.1.0
 Jinja2==3.0.3
-jsonschema==3.2.0
 kiwisolver==1.3.2
-lru-dict==1.1.7
-MarkupSafe==2.0.1
+MarkupSafe==2.1.0
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.27.0
 matplotlib==3.5.1
-multiaddr==0.0.9
-multidict==6.0.2
-netaddr==0.8.0
-numpy==1.21.5
+numpy==1.22.2
 packaging==21.3
-parsimonious==0.8.1
 Pillow==9.0.1
-protobuf==3.19.4
-pycryptodome==3.14.1
 pyparsing==3.0.7
-pyrsistent==0.18.1
-python-datauri==1.1.0
 python-dateutil==2.8.2
 pytz==2021.3
 randimage==1.2
-requests==2.27.1
-rlp==2.0.1
-scipy==1.7.3
+scipy==1.8.0
 six==1.16.0
-SQLAlchemy==1.4.31
+SQLAlchemy==1.4.32
 termcolor==1.1.0
-toolz==0.11.2
-tqdm==4.62.3
-urllib3==1.26.8
-varint==1.0.2
-web3==5.28.0
 webargs==8.1.0
-websockets==9.1
-Werkzeug==2.0.2
-yarl==1.7.2
+Werkzeug==2.0.3
