--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -47,5 +47,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://acceth.xyz"
+    "proxy": "http://192.168.178.55:5050"
 }
