--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,10 @@
 aniso8601==9.0.1
 apispec==5.1.1
+base58==2.1.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.0.4
 cycler==0.11.0
-datauri==1.0.0
 Flask==2.0.3
 flask-apispec==0.11.0
 Flask-Cors==3.0.10
@@ -10,6 +12,9 @@ flask-marshmallow==0.14.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 fonttools==4.29.1
+idna==3.3
+ipfsapi==0.4.4
+ipfshttpclient==0.4.13.2
 itsdangerous==2.1.0
 Jinja2==3.0.3
 kiwisolver==1.3.2
@@ -17,16 +22,22 @@ MarkupSafe==2.1.0
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.27.0
 matplotlib==3.5.1
+multiaddr==0.0.9
+netaddr==0.8.0
 numpy==1.22.2
 packaging==21.3
 Pillow==9.0.1
 pyparsing==3.0.7
+python-datauri==1.1.0
 python-dateutil==2.8.2
 pytz==2021.3
 randimage==1.2
+requests==2.27.1
 scipy==1.8.0
 six==1.16.0
 SQLAlchemy==1.4.32
 termcolor==1.1.0
+urllib3==1.26.8
+varint==1.0.2
 webargs==8.1.0
 Werkzeug==2.0.3
